src/tests/fixtures/user_error/KillsParentOnExceptionOnNonField.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @killsParentOnException */
const foo = "bar";

/** @gqlType */
type Foo = {
  /** @gqlField */
  bar: string;
};

-----------------
OUTPUT
-----------------
src/tests/fixtures/user_error/KillsParentOnExceptionOnNonField.invalid.ts:1:6 - error: Unexpected `@killsParentOnException`. `@killsParentOnException` can only be used in field annotation docblocks. Perhaps you are missing a `@gqlField` tag?

1 /** @killsParentOnException */
       ~~~~~~~~~~~~~~~~~~~~~~
